Fixed links on the index page

--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -1,3 +1,3 @@
 <h1>IMDB Knock Off!</h1>
-<p> <%= link_to "View All Movies", "list" %> </p>
-<p> <%= link_to "Add a New Movie", "new" %> </p>
+<p> <%= link_to "View All Movies", "movies/list" %> </p>
+<p> <%= link_to "Add a New Movie", "movies/new" %> </p>
