--- a/app/views/movies/new.erb
+++ b/app/views/movies/new.erb
@@ -1,15 +1,21 @@
-<form action="<%= url_for(:movies, :create) %>" method="POST">
-  <label for="name">Movie Name:</label>
-  <input type="text" name="name" />
-
-  <label for="rating">Rating:</label>
-  <select name="rating">
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5">5</option>
-  </select>
-
-  <input type="submit" />
-</form>
+<h1>Add a new Movie</h1>
+<% form_for(@movie, path) do |m| %>
+	<% if @movie.errors.present? %>
+		<img src="https://s-media-cache-ak0.pinimg.com/736x/05/24/74/05247421aa4e1006a06c9cdc7cddb3d2.jpg">
+		<ul>
+			<% @movie.errors.full_messages.each do |error| %>
+				<% if error.include?("Rating") %>
+					<li>Rating must be between 1 - 5</li>
+				<% elsif error.include?("Name") %>
+					<li>Name must not be blank</li>
+				<% else %>
+					<li><% error %></li>
+				<% end %>
+			<% end %>
+		</ul>
+	<% end %>
+  <%= m.text_field_block(:name) %>
+  <%= m.label(:rating) %>
+  <%= m.number_field(:rating, min: 1, max: 5, step: 1) %>
+  <%= m.submit %>
+<% end %>
