--- a/app/views/movies/show.erb
+++ b/app/views/movies/show.erb
@@ -1,5 +1,5 @@
 <h1>Name: <%= @movie.name %></h1>
 <h1>Rating: <%= @movie.rating %></h1>
-<p> <%= link_to 'Edit this movie', "#{@movie.id}/edit" %> </p>
-<p> <%= link_to 'Delete this movie', "#{@movie.id}/delete" %> </p>
+<p> <%= link_to 'Edit this movie', url(:movies, :update, id: @movie.id) %> </p>
+<p> <%= link_to 'Delete this movie', "#{@movie.id}/confirm-delete" %> </p>
 <p> <%= link_to "View All Movies", "list" %> </p>
